[package]
name = "launchwerk"
version = "0.1.0"
edition = "2024"


[dependencies]
dashmap = "6.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["io-util", "process", "rt", "sync"] }
tracing = "0.1.44"
uuid = { version = "1.23.1", features = ["v4"] }

[dev-dependencies]
tracing-subscriber = "0.3.23"
