[package]
name = "launchwerk"
version = "1.0.1"
edition = "2024"
authors = ["Santiagolxx", "CubicLauncher contributors"]
license = "AGPL-3.0-or-later"
description = "Minecraft launcher library for CubicLauncher"

[dependencies]
dashmap = "6.1.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
thiserror = "2.0.17"
tokio = { version = "1.52.2", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
zip = "8.6.0"

[dev-dependencies]
env_logger = "0.11"
